--- a/computed/demo.html
+++ b/computed/demo.html
@@ -6,7 +6,7 @@
       <p>Computed reversed message: "{{ reversedMessage }}"</p>
       <p>Computed message Add '哈哈哈哈': "{{ addMessage }}"</p>
     </div>
-    <script src="libs/dist/vue.min.js"></script>
+    <script src="/libs/dist/vue.min.js"></script>
     <script>
       var vm = new Vue({
         el:'#example',
