--- a/conditional/v-bind指令.html
+++ b/conditional/v-bind指令.html
@@ -43,7 +43,7 @@
             </ul>
         </div>
     </body>
-    <script src="libs/dist/vue.min.js"></script>
+    <script src="/libs/dist/vue.min.js"></script>
     <script>
         var vm = new Vue({
             el: '#app',
