--- a/conditional/v-else指令.html
+++ b/conditional/v-else指令.html
@@ -14,7 +14,7 @@
         啦啦啦
       </div>
     </div>
-    <script src="libs/dist/vue.min.js"></script>
+    <script src="/libs/dist/vue.min.js"></script>
     <script>
       var exampleData = {
         message:'hello World',
