--- a/conditional/v-for指令.html
+++ b/conditional/v-for指令.html
@@ -27,7 +27,7 @@
             </table>
         </div>
     </body>
-    <script src="libs/dist/vue.min.js"></script>
+    <script src="/libs/dist/vue.min.js"></script>
     <script>
         var vm = new Vue({
             el: '#app',
