--- a/conditional/v-if指令.html
+++ b/conditional/v-if指令.html
@@ -10,7 +10,7 @@
         哈哈哈
       </div>
     </div>
-    <script src="libs/dist/vue.min.js"></script>
+    <script src="/libs/dist/vue.min.js"></script>
     <script>
       var exampleData = {
         message:'hello World',
