--- a/conditional/v-show指令.html
+++ b/conditional/v-show指令.html
@@ -13,7 +13,7 @@
             <h1 v-show="name.indexOf('jack') >= 0">Name: {{ name }}</h1>
         </div>
     </body>
-    <script src="libs/dist/vue.min.js"></script>
+    <script src="/libs/dist/vue.min.js"></script>
     <script>
         
         var vm = new Vue({
