--- a/list/base.html
+++ b/list/base.html
@@ -3,6 +3,11 @@
   <body>
     <ul id="example">
       <li v-for="(item,index) in items">{{index}}-{{item.message}}</li>
+      <li class="fdc-userlogin login-regist dropdownlogin">
+        <a class="user-login" href="javascript:void(0);" class="top_uc_login" data-spmcode="fdc00.0000.pctop.a0001xxx">登录</a>
+      </li>
+      <li class="login-regist"><a href="javaScript:void(0)" class="top_uc_regist" data-spmcode="fdc00.0000.pctop.a0002xxx" data-openNew="true">注册</a></li>
+      
     </ul>
     <script src="/libs/dist/vue.min.js"></script>
     <script>
