--- a/event/fun.html
+++ b/event/fun.html
@@ -7,6 +7,10 @@
     </div>
     <script src="/libs/dist/vue.min.js"></script>
     <script>
+      Vue.filter('my-filter', function (value) {
+        // 返回处理后的值
+        console.log(value);
+      })
       var example2 = new Vue({
         el: '#example-2',
         data: {
@@ -15,6 +19,7 @@
         // 在 `methods` 对象中定义方法
         methods: {
           greet: function (event) {
+            var _this = this;
             // `this` 在方法里指当前 Vue 实例
             alert('Hello ' + this.name + '!')
             // `event` 是原生 DOM 事件
