--- a/test/video.html
+++ b/test/video.html
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>video</title>
+	<style>
+	html{
+		font-size: 100px;
+	}
+		button{
+			line-height: 40px;
+			font-size: 30px;
+		}
+	</style>
 </head>
 <body>	
 	<div>
