--- a/test/index.html
+++ b/test/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <script src="/libs/dist/vue.min.js"></script>
+    <script src="./libs/vue.min.js"></script>
     <script>
 
       
